samples/_failures_safe/1761696290_f1dc2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64a5b8da.c: In function ‘main’:
./samples/SAFE/__tmp_64a5b8da.c:131:13: error: expected declaration or statement at end of input
  131 |             printf("Matrix A:\n");
      |             ^~~~~~
./samples/SAFE/__tmp_64a5b8da.c:131:13: error: expected declaration or statement at end of input
